LightningDev/force-app/main/default/objects/Candidate__c/fields/Current_CTC__c.field-meta.xml
<CustomField>
    <fullName>Current_CTC__c</fullName>
    <label>Current CTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>