LightningDev/force-app/main/default/objects/Candidate__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BAN</fullName>
            </value>
            <value>
                <fullName>BZA</fullName>
            </value>
            <value>
                <fullName>DEL</fullName>
            </value>
            <value>
                <fullName>HYD</fullName>
            </value>
            <value>
                <fullName>VSKP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>