LightningDev/force-app/main/default/objects/Candidate__c/fields/Notice_period__c.field-meta.xml
<CustomField>
    <fullName>Notice_period__c</fullName>
    <label>Notice period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>1week</fullName>
            </value>
            <value>
                <fullName>2weeks</fullName>
            </value>
            <value>
                <fullName>1month</fullName>
            </value>
            <value>
                <fullName>2month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>