LightningDev/force-app/main/default/objects/Candidate__c/fields/PositionName__c.field-meta.xml
<CustomField>
    <fullName>PositionName__c</fullName>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>